syntax = "proto3";
option go_package = "/gen";

message Metadata {
  string id = 1;
  string title = 2;
  string description = 3;
  string director = 4;
}

message MovieDetails {
  double rating = 1;
  Metadata mtadata = 2;
}

message GetMetadataRequest {
  string movie_id=1;
}

message GetMetadataResponse {
  Metadata metadata = 1;
}

service MetadataService {
  rpc GetMetadata(GetMetadataRequest) returns (GetMetadataResponse);
}

message GetAggregatedRatingRequest {
  string record_id=1;
  string record_type=2;
}

message GetAggregatedRatingResponse {
  double rating_value=1;
}

message PutRatingRequest {
  string user_id=1;
  string record_id=2;
  string record_type=3;
  int32 rating_value=4;
}

message PutRatingResponse {

}

service RatingService {
  rpc GetAggregatedRating(GetAggregatedRatingRequest) 
    returns (GetAggregatedRatingResponse);
  rpc PutRating(PutRatingRequest) returns (PutRatingResponse);
}

message GetMovieDetailsRequest{
  string movie_id=1;
}

message GetMovieDetailsRespoonse {
  MovieDetails movie_details=1;
}

service MovieService {
  rpc GetMovieDetails(GetMovieDetailsRequest) 
    returns (GetMovieDetailsRespoonse);
}